Internal change
PiperOrigin-RevId: 979657047